# jit

./: Cargo.toml  Makefile  README.md  SKILL.md  SKILLS.md
.github/workflows/: release-tests.yml  tests.yml
src/: main.rs
tasks/: lessons.md
tests/: cli_end_to_end.rs
