[package]
name = "jit-cli"
version = "0.6.1"
edition = "2024"
description = "A CLI for fetching JIRA issue summaries, details, and current sprint tickets."
readme = "README.md"
license = "MIT"
repository = "https://github.com/cesarferreira/jit"
homepage = "https://github.com/cesarferreira/jit"
keywords = ["jira", "cli", "issue", "atlassian"]
categories = ["command-line-utilities"]

[[bin]]
name = "jit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
base64 = "0.22.1"
regex = "1.12.3"
prettytable = "0.10.0"
dirs = "6.0.0"
colored = "3.1.1"
term_size = "0.3.2"
unicode-width = "0.2.2"
once_cell = "1.21.3"
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
toml = "1.1.2"
